--- a/index.html
+++ b/index.html
@@ -12,21 +12,47 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ipromve your bussiness with our data analytics solutions.">
 
   <title>Iva Fischerova | Frontend Mentor | Stats preview card component</title>
 
 </head>
 
 <body>
+  <main class="card">
+    <section class="cardContent isResponsive">
 
-  Get insights that help your business grow.
+      <div class="mainContent isResponsive">
+        <div class="imgWrapper">
+        </div>
+        <div class="mainText">
+          <h1>Get <span>insights</span> that help your business grow.</h1>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+          <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.</p>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+          <div class="statistics isResponsive">
+
+            <div class="statisticsDiv">
+              <h2>10k+</h2>
+              <p>companies</p>
+            </div>
+
+            <div class="statisticsDiv">
+              <h2>314</h2>
+              <p>templates</p>
+            </div>
+
+            <div>
+              <h2>12M+</h2>
+              <p>queries</p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
