Fixed typo in meta description.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ipromve your bussiness with our data analytics solutions.">
+  <meta name="description" content="Improve your bussiness with our data analytics solutions.">
 
   <title>Iva Fischerova | Frontend Mentor | Stats preview card component</title>
 
